<resources>
    <string name="app_name">Academo</string>
    <string name="app_title">ACADEMO</string>
    <string name="login">User</string>
    <string name="login_hint">User Name</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Enter</string>
    <string name="register_button">Register</string>
    <string name="register_profile_picture">Import a profile picture</string>
    <string name="register_user_name">User Name</string>
    <string name="register_password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register_title">REGISTER</string>
</resources>