<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/app_title"
                android:textSize="64sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title">

            <TextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/login"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/input_user_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/user"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:hint="@string/login_hint"
                android:padding="12dp" />

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_user_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/password"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="12dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:layout_marginTop="32dp">

            <Button
                android:id="@+id/login_button"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/square_button_selector"
                android:fontFamily="monospace"
                android:text="@string/login_button"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:layout_below="@id/login_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/square_button_selector"
                android:fontFamily="monospace"
                android:text="@string/register_button"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/register_import_picture_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp"
                android:layout_below="@id/register_button"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif"
                android:text="@string/forgot_password"
                android:textSize="16sp"
                android:textColor="#0000FF"
                android:focusable="true"
                android:clickable="true" />
        </RelativeLayout>

    </RelativeLayout>

</ScrollView>